ADD: Re-added deleted projects for some reason.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<h1>PORTFOLIO</h1>
 
 		<div class="portfolio-card">
-			<a href="" target="_blank">
+			<a href="https://s3-ap-southeast-2.amazonaws.com/andrew-orourke.com/images/uncompressed/Icosian-io.png" target="_blank">
 				<div id="icosian-website-img">
 					<div class="icosian-website-hover">
 						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
@@ -73,27 +73,6 @@
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> Landing page design for the Icosian platform.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="projects/WeatherDashboard/index.html" target="_blank">
-				<div id="weather-img">
-					<div class="weather-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
 				</div>
 			</div>
 		</div>
@@ -161,70 +140,6 @@
 			</div>
 		</div>
 
-
-		<div class="portfolio-card">
-			<a href="" target="_blank">
-				<div id="icosian-img">
-					<div class="icosian-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> Icosian UI Overhaul</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, AngularJS, Adobe Experience Design, Photoshop</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> </p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="" target="_blank">
-				<div id="cns-cloud-img">
-					<div class="cns-cloud-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> CNS Cloud Website</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, Wordpress, Adobe Experience Design</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> </p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="" target="_blank">
-				<div id="fm-finance-img">
-					<div class="fm-finance-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> FM Finance Website</p>
-				</div>
-				<div class="proj-tech">
-					<p><b class="accent">Technologies used:</b> HTML, CSS, Wordpress.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> </p>
-				</div>
-			</div>
-		</div>
-
 		<div class="portfolio-card">
 			<a href="#whatshouldidotoday-img">
 				<div id="whatshouldidotoday-img">
@@ -242,6 +157,111 @@
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> WhatShouldIDoToday is a web application consisting of a mashup of 3 seperate APIs that use each other's data to suggest what a user should do on a given day. The project was built with a Node.js back-end complimented by a Bootstrapped front-end.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="projects/WeatherDashboard/index.html" target="_blank">
+				<div id="weather-img">
+					<div class="weather-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> The Weather Dashboard</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, JavaScript, JQuery &amp; 2 APIs.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> The goal of this project was to implement a simple weather dashboard using the <a href="https://www.wunderground.com/" target="_blank"><u>wunderground</u></a> weather API. Some weather values are plugged into a Javascript radial graphing API developed by <a href="http://pablomolnar.github.io/radial-progress-chart/" target="_blank"><u>pablomolnar</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="https://s3-ap-southeast-2.amazonaws.com/ping-me-pdf/Screen-flow.pdf" target="_blank">
+				<div id="pingme-img">
+					<div class="pingme-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> PingMe UI designs</p>
+				</div>
+				<div class="proj-tech">
+					<p class="tech-used"><b class="accent">Technologies used:</b> Photoshop, Android emulators.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> User interface designs for a conceptualised mobile application; PingMe. The application is designed to request the whereabouts of friends, colleagues, family, etc. It was built as part of a project specified by <a href="https://www.telstra.com.au/" target="_blank"><u>Telstra Australia</u></a>.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a>
+				<div id="icosian-img">
+					<div class="icosian-hover">
+						<p class="portfolio-overlay-text"><b>Temporarily unavailable</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> Icosian UI Overhaul</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, AngularJS, Adobe Experience Design, Photoshop</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> UI overhaul of a client facing portal for the Icosian platform</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a>
+				<div id="cns-cloud-img">
+					<div class="cns-cloud-hover">
+						<p class="portfolio-overlay-text"><b>Temporarily unavailable</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> CNS Cloud Website</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, Wordpress, Adobe Experience Design</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> Business website for the web and software consulting business CNS Cloud</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="portfolio-card">
+			<a href="http://www.fmfinance.com.au/" target="_blank">
+				<div id="fm-finance-img">
+					<div class="fm-finance-hover">
+						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
+					</div>
+				</div>
+			</a>
+			<div class="portfolio-info-container">
+				<div class="proj-title">
+					<p><b class="accent">Project title:</b> FM Finance Website</p>
+				</div>
+				<div class="proj-tech">
+					<p><b class="accent">Technologies used:</b> HTML, CSS, Wordpress.</p>
+				</div>
+				<div class="proj-description">
+					<p><b class="accent">Project description:</b> Website developed for a financing company; FM Finance</p>
 				</div>
 			</div>
 		</div>
@@ -284,27 +304,6 @@
 				</div>
 				<div class="proj-description">
 					<p><b class="accent">Project description:</b> This project was a redesign of an existing tennis club webpage.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="portfolio-card">
-			<a href="https://s3-ap-southeast-2.amazonaws.com/ping-me-pdf/Screen-flow.pdf" target="_blank">
-				<div id="pingme-img">
-					<div class="pingme-hover">
-						<p class="portfolio-overlay-text"><b>Click to view project</b></p>
-					</div>
-				</div>
-			</a>
-			<div class="portfolio-info-container">
-				<div class="proj-title">
-					<p><b class="accent">Project title:</b> PingMe UI designs</p>
-				</div>
-				<div class="proj-tech">
-					<p class="tech-used"><b class="accent">Technologies used:</b> Photoshop, Android emulators.</p>
-				</div>
-				<div class="proj-description">
-					<p><b class="accent">Project description:</b> User interface designs for a conceptualised mobile application; PingMe. The application is designed to request the whereabouts of friends, colleagues, family, etc. It was built as part of a project specified by <a href="https://www.telstra.com.au/" target="_blank"><u>Telstra Australia</u></a>.</p>
 				</div>
 			</div>
 		</div>
